# roman

./: .gitignore  CMakeLists.txt  README  result
src/: CMakeLists.txt  main.c  roman.c  roman.h
tests/: CMakeLists.txt  check_roman.c
